--- a/src/main/resources/Dockerfile
+++ b/src/main/resources/Dockerfile
@@ -1,4 +1,4 @@
-FROM azul/zulu-openjdk-alpine:8
+FROM azul/zulu-openjdk-alpine:19-latest
 
 RUN apk update && apk add --no-cache curl less
 
@@ -6,4 +6,5 @@ COPY . /opt/app/
 RUN chmod +x /opt/app/entrypoint.sh
 
 WORKDIR /opt/app
+
 ENTRYPOINT ["/opt/app/entrypoint.sh"]
