First version of email access validation

--- a/src/main/resources/Dockerfile
+++ b/src/main/resources/Dockerfile
@@ -5,6 +5,9 @@ RUN apk update && apk add --no-cache curl less
 COPY . /opt/app/
 RUN chmod +x /opt/app/entrypoint.sh
 
+RUN mkdir /root/.aws
+COPY ./credentials-wcfc /root/.aws/credentials
+
 WORKDIR /opt/app
 
 ENTRYPOINT ["/opt/app/entrypoint.sh"]
