--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.wingsofcarolina</groupId>
 	<artifactId>manuals</artifactId>
 	<packaging>jar</packaging>
-	<version>1.2.6</version>
+	<version>2.0.0</version>
 	
 	<name>wcfc-manuals</name>
 
@@ -19,7 +19,7 @@
 		<dropwizard.version>2.0.19</dropwizard.version>
 		<jackson.version>2.8.8</jackson.version>
 		<docker.pull.registry>docker.io</docker.pull.registry>
-		<docker.registry>planez.co:5000</docker.registry>
+		<docker.registry>reg.planez.co</docker.registry>
 		<dockerRegistry>${docker.registry}</dockerRegistry>
 		<dockerTag>${project.version}</dockerTag>
 		<dockerImage>${dockerRegistry}/${project.artifactId}:${project.version}
@@ -94,6 +94,18 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/dev.morphia.morphia/core -->
+		<dependency>
+			<groupId>dev.morphia.morphia</groupId>
+			<artifactId>morphia-core</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
+		<dependency>
+		    <groupId>org.mongodb</groupId>
+		    <artifactId>mongodb-driver-sync</artifactId>
+		    <version>4.10.1</version>
+		</dependency>
 		<dependency>
 			<groupId>com.dropbox.core</groupId>
 			<artifactId>dropbox-core-sdk</artifactId>
@@ -141,6 +153,27 @@
 			<artifactId>tika-core</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<!--
+		     Amazon AWS support libraries included below, mostly for SES access
+		     https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core
+		-->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-core</artifactId>
+			<version>1.12.533</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-ses -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-ses</artifactId>
+			<version>1.12.533</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -184,7 +217,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.6</version>
+					<version>3.1.1</version>
 					<configuration>
 			          <excludes>
 			            <exclude>**/root/*</exclude>
