--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>manuals</artifactId>
 	<packaging>jar</packaging>
 	<version>2.0.0</version>
-	
+
 	<name>wcfc-manuals</name>
 
 	<properties>
@@ -48,6 +48,12 @@
 			<artifactId>dropwizard-forms</artifactId>
 			<version>${dropwizard.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.knowm/dropwizard-sundial -->
+		<dependency>
+			<groupId>org.knowm</groupId>
+			<artifactId>dropwizard-sundial</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
@@ -63,7 +69,8 @@
 			<artifactId>slack-api-client</artifactId>
 			<version>1.6.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.palantir.roboslack/roboslack-webhook-api -->
+		<!--
+		https://mvnrepository.com/artifact/com.palantir.roboslack/roboslack-webhook-api -->
 		<dependency>
 			<groupId>com.palantir.roboslack</groupId>
 			<artifactId>roboslack-webhook-api</artifactId>
@@ -75,13 +82,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.palantir.roboslack/roboslack-api -->
+		<!--
+		https://mvnrepository.com/artifact/com.palantir.roboslack/roboslack-api -->
 		<dependency>
 			<groupId>com.palantir.roboslack</groupId>
 			<artifactId>roboslack-api</artifactId>
 			<version>1.3.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.palantir.roboslack/roboslack-webhook -->
+		<!--
+		https://mvnrepository.com/artifact/com.palantir.roboslack/roboslack-webhook -->
 		<dependency>
 			<groupId>com.palantir.roboslack</groupId>
 			<artifactId>roboslack-webhook</artifactId>
@@ -102,9 +111,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
 		<dependency>
-		    <groupId>org.mongodb</groupId>
-		    <artifactId>mongodb-driver-sync</artifactId>
-		    <version>4.10.1</version>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>4.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.dropbox.core</groupId>
@@ -135,13 +144,15 @@
 			<artifactId>okhttp</artifactId>
 			<version>4.10.0-RC1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
+		<!--
+		https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>logging-interceptor</artifactId>
 			<version>4.10.0-RC1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson -->
+		<!--
+		https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson -->
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>converter-gson</artifactId>
@@ -219,10 +230,10 @@
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.1.1</version>
 					<configuration>
-			          <excludes>
-			            <exclude>**/root/*</exclude>
-			          </excludes>
-			        </configuration>
+						<excludes>
+							<exclude>**/root/*</exclude>
+						</excludes>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -254,9 +265,10 @@
 						</goals>
 						<configuration>
 							<tasks>
-								<exec dir="./client" executable="/usr/local/bin/npx">
+								<exec dir="./client"
+									executable="/usr/local/bin/npx">
 									<arg
-										line="sapper export --entry '/ equipment contact about'" />
+										line="sapper export --entry '/ equipment login contact about'" />
 								</exec>
 								<delete dir="target/classes/assets" />
 								<copy todir="target/classes/assets">
@@ -291,7 +303,8 @@
 					<prefix>git</prefix>
 					<verbose>false</verbose>
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
-					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
+					<generateGitPropertiesFilename>
+						${project.build.outputDirectory}/git.properties
 					</generateGitPropertiesFilename>
 					<format>json</format>
 					<gitDescribe>
@@ -326,7 +339,8 @@
 							</Git-Remote-Origin-Url>
 							<Git-Commit-Id-Abbrev>${git.commit.id.abbrev}
 							</Git-Commit-Id-Abbrev>
-							<Git-Commit-Id-Describe-short>${git.commit.id.describe-short}
+							<Git-Commit-Id-Describe-short>
+								${git.commit.id.describe-short}
 							</Git-Commit-Id-Describe-short>
 							<Git-Commit-User-Name>${git.commit.user.name}
 							</Git-Commit-User-Name>
@@ -384,7 +398,8 @@
 							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>org.wingsofcarolina.manuals.ManualsService</mainClass>
+							<mainClass>
+								org.wingsofcarolina.manuals.ManualsService</mainClass>
 						</transformer>
 					</transformers>
 				</configuration>
@@ -412,9 +427,11 @@
 						<configuration>
 							<fileSets>
 								<fileSet>
-									<sourceFile>target/${project.artifactId}-${project.version}.jar
+									<sourceFile>
+										target/${project.artifactId}-${project.version}.jar
 									</sourceFile>
-									<destinationFile>docker/${project.artifactId}.jar
+									<destinationFile>
+										docker/${project.artifactId}.jar
 									</destinationFile>
 								</fileSet>
 							</fileSets>
@@ -438,9 +455,9 @@
 								<resource>
 									<directory>src/main/resources</directory>
 									<filtering>false</filtering>
-							        <excludes>
-							          <exclude>root/**</exclude>
-							        </excludes>
+									<excludes>
+										<exclude>root/**</exclude>
+									</excludes>
 								</resource>
 							</resources>
 						</configuration>
