Updated to Java 21
* Updated all Maven dependencies to current
* Updated Dropwizard to 4.x
* Changed configuration file from ftl to yml
* Updated javax to Jakarta and fixed various other API changes

--- a/src/main/resources/configuration.yml
+++ b/src/main/resources/configuration.yml
@@ -1,27 +1,27 @@
 ######
 
-root: ${ROOT!'./root'}
+root: ${ROOT:-./root}
 
 # Location of the MongoDB server
 # If on a Docker network, just give the name of the MongoDB
 # container. Otherwise give the IP:PORT for the MongoDB process.
-mongodb: ${MONGODB!'mongodb://mongodb'}
+mongodb: ${MONGODB:-mongodb://mongodb}
 
 # URL of the server where the groundschool service is running
-manualsServer: ${MANUALSSERVER!'https://manuals.wingsofcarolina.org'}
+manualsServer: ${MANUALSSERVER:-https://manuals.wingsofcarolina.org}
 
 # Operational mode, DEV or PROD
-mode: ${MODE!'PROD'}
+mode: ${MODE:-PROD}
 
 # Authentication, ON or OFF
-auth: ${AUTH!'ON'}
+auth: ${AUTH:-ON}
 
 # Mock user
-mockUser: ${MOCKUSER!'none'}
+mockUser: ${MOCKUSER:-none}
 
 # Slack channels
-slackNotify: ${SLACK!'T0H7FTUQK/B02LP23EURJ/d9iiJxMCsr03OBWgYsP4cf9E'}     # Targets #notification
-slackManuals: ${SLACK!'T0H7FTUQK/B049U4ZG7TL/ct0vai5hEa4a4oA8GJAq97ep'}    # Targets #manuals
+slackNotify: ${SLACK:-T0H7FTUQK/B02LP23EURJ/d9iiJxMCsr03OBWgYsP4cf9E}     # Targets #notification
+slackManuals: ${SLACK:-T0H7FTUQK/B049U4ZG7TL/ct0vai5hEa4a4oA8GJAq97ep}    # Targets #manuals
 
 # Configure the Sundial job management system    
 sundial:
@@ -39,16 +39,16 @@ server:
     type: simple
     connector:
         type: http
-        port: ${SERVER_PORT!'9300'}
+        port: ${SERVER_PORT:-9300}
     applicationContextPath: /
     adminContextPath: /admin
     requestLog:
         appenders:
           - type: file
-            currentLogFilename: ${LOG_DIR!'/log'}/manuals-http.log
+            currentLogFilename: ${LOG_DIR:-/log}/manuals-http.log
             threshold: ALL
             archive: true
-            archivedLogFilenamePattern: ${LOG_DIR!'/log'}/manuals-%i-%d-http.log
+            archivedLogFilenamePattern: ${LOG_DIR:-/log}/manuals-%i-%d-http.log
             maxFileSize: 500MB
             archivedFileCount: 5
             timeZone: UTC
@@ -56,11 +56,11 @@ server:
 # SLF4j Logging settings.
 logging:
   # The default level of all loggers. Can be OFF, ERROR, WARN, INFO, DEBUG, TRACE, or ALL.
-  level: ${DEFAULT_LOGLEVEL!'INFO'}
+  level: ${DEFAULT_LOGLEVEL:-INFO}
 
   # Logger-specific levels.
   loggers:
-    "org.wingsofcarolina.manuals": ${LOGLEVEL!'INFO'}
+    "org.wingsofcarolina.manuals": ${LOGLEVEL:-INFO}
     
   appenders:
       - type: console
@@ -68,10 +68,10 @@ logging:
         timeZone: UTC
         target: stdout
       - type: file
-        currentLogFilename: ${LOG_DIR!'/log'}/manuals.log
+        currentLogFilename: ${LOG_DIR:-/log}/manuals.log
         threshold: ALL
         archive: true
-        archivedLogFilenamePattern: ${LOG_DIR!'/log'}/manuals-%i-%d.log
+        archivedLogFilenamePattern: ${LOG_DIR:-/log}/manuals-%i-%d.log
         maxFileSize: 500MB
         archivedFileCount: 5
         timeZone: UTC
