--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8
 		</project.reporting.outputEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <dropwizard.version>2.0.19</dropwizard.version>
-    <jackson.version>2.8.8</jackson.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <dropwizard.version>4.0.8</dropwizard.version>
+    <jackson.version>2.17.2</jackson.version>
     <docker.pull.registry>docker.io</docker.pull.registry>
     <docker.registry>reg.planez.co</docker.registry>
     <dockerRegistry>${docker.registry}</dockerRegistry>
@@ -47,97 +47,91 @@
     <dependency>
       <groupId>org.knowm</groupId>
       <artifactId>dropwizard-sundial</artifactId>
-      <version>2.0.0</version>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.12.1</version>
+      <version>${jackson.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
     <dependency>
-      <groupId>de.thomaskrille</groupId>
-      <artifactId>dropwizard-template-config</artifactId>
-      <version>1.4.0</version>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>5.5</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.14</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
-    <!-- https://github.com/jwtk/jjwt -->
+    <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt</artifactId>
-      <version>0.9.1</version>
+      <artifactId>jjwt-api</artifactId>
+      <version>0.13.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>0.13.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>0.13.0</version>
+      <scope>runtime</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/dev.morphia.morphia/core -->
     <dependency>
       <groupId>dev.morphia.morphia</groupId>
       <artifactId>morphia-core</artifactId>
-      <version>2.1.7</version>
+      <version>2.5.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-sync</artifactId>
-      <version>4.10.1</version>
+      <version>5.6.0-alpha0</version>
     </dependency>
     <dependency>
       <groupId>com.dropbox.core</groupId>
       <artifactId>dropbox-core-sdk</artifactId>
-      <version>3.1.5</version>
+      <version>7.0.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
     <dependency>
       <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
-      <version>5.3</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>5.12.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit -->
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>retrofit</artifactId>
-      <version>2.9.0</version>
+      <version>3.0.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>4.10.0-RC1</version>
+      <version>5.1.0</version>
     </dependency>
     <!--
 		https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor -->
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>logging-interceptor</artifactId>
-      <version>4.10.0-RC1</version>
+      <version>5.1.0</version>
     </dependency>
     <!--
 		https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson -->
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>converter-gson</artifactId>
-      <version>2.9.0</version>
+      <version>3.0.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-core</artifactId>
-      <version>2.0.0</version>
+      <version>3.2.2</version>
     </dependency>
     <!--
 		     Amazon AWS support libraries included below, mostly for SES access
@@ -146,19 +140,19 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-core</artifactId>
-      <version>1.12.533</version>
+      <version>1.12.789</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-ses -->
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-ses</artifactId>
-      <version>1.12.533</version>
+      <version>1.12.789</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
-      <version>1.17.1</version>
+      <version>1.21.2</version>
     </dependency>
   </dependencies>
   <build>
@@ -168,41 +162,41 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>3.1.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18.1</version>
+          <version>3.3.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.7</version>
+          <version>3.3.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.4.1</version>
+          <version>3.5.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.3</version>
+          <version>3.13.0</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>21</source>
+            <target>21</target>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.4</version>
+          <version>3.3.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.1</version>
+          <version>3.4.2</version>
           <configuration>
             <excludes>
               <exclude>**/root/*</exclude>
@@ -212,7 +206,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>2.4.1</version>
+          <version>3.6.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -361,12 +355,48 @@
                 <exclude>META-INF/*.SF</exclude>
                 <exclude>META-INF/*.DSA</exclude>
                 <exclude>META-INF/*.RSA</exclude>
+                <exclude>META-INF/MANIFEST.MF</exclude>
+                <exclude>META-INF/NOTICE</exclude>
+                <exclude>META-INF/NOTICE.txt</exclude>
+                <exclude>META-INF/NOTICE.md</exclude>
+                <exclude>META-INF/NOTICE.markdown</exclude>
+                <exclude>META-INF/LICENSE</exclude>
+                <exclude>META-INF/LICENSE.txt</exclude>
+                <exclude>META-INF/LICENSE.md</exclude>
+		<exclude>META-INF/DEPENDENCIES</exclude>
+		<exclude>META-INF/kotlin-project-structure-metadata.json</exclude>
+                <exclude>META-INF/native-image/native-image.properties</exclude>
+                <exclude>META-INF/native-image/reflect-config.json</exclude>
               </excludes>
             </filter>
             <filter>
               <artifact>commons-logging:commons-logging</artifact>
               <excludes>
                 <exclude>**</exclude>
+              </excludes>
+            </filter>
+            <filter>
+              <artifact>jakarta.activation:jakarta.activation-api</artifact>
+              <excludes>
+                <exclude>**</exclude>
+              </excludes>
+            </filter>
+            <filter>
+              <artifact>org.apache.httpcomponents:httpclient</artifact>
+              <excludes>
+                <exclude>mozilla/public-suffix-list.txt</exclude>
+              </excludes>
+            </filter>
+            <filter>
+              <artifact>com.squareup.okio:okio</artifact>
+              <excludes>
+                <exclude>META-INF/okio.kotlin_module</exclude>
+              </excludes>
+            </filter>
+            <filter>
+              <artifact>org.mongodb:bson</artifact>
+              <excludes>
+                <exclude>META-INF/native-image/org.mongodb/bson/native-image.properties</exclude>
               </excludes>
             </filter>
           </filters>
