--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,12 @@
     "compression": "^1.7.1",
     "js-cookie": "^2.2.1",
     "js-cookies": "^1.0.4",
-    "jsuites": "^2.7.1",
-    "page": "^1.11.6",
+    "jsuites": "^5.12.0",
+    "page": "^1.3.7",
     "pagedown": "^1.1.0",
     "polka": "^1.0.0-next.11",
     "query-string": "^6.13.7",
-    "simplepicker": "^2.0.3",
+    "simplepicker": "^2.0.0",
     "sirv": "^0.4.6",
     "svelte-touch-timepicker": "^1.0.0",
     "sveltejs-tippy": "^3.0.0"
@@ -34,17 +34,17 @@
     "@babel/runtime": "^7.12.5",
     "@beyonk/svelte-notifications": "^2.0.3",
     "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.2",
     "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-terser": "^0.4.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^1.4.2",
-    "rollup": "^1.32.1",
+    "rollup": "^2.79.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-svelte": "^6.1.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "sapper": "^0.27.16",
-    "svelte": "^3.31.0",
+    "sapper": "^0.29.3",
+    "svelte": "^3.59.2",
     "svelte-loading-spinners": "^0.1.7",
     "svelte-media": "^0.1.5"
   }
