--- a/client/package.json
+++ b/client/package.json
@@ -3,49 +3,34 @@
   "version": "2.0.1",
   "description": "A learning system for the Wings of Carolina flying club.",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "node build",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
   },
   "dependencies": {
-    "@pdftron/pdfjs-express": "^8.1.1",
-    "compression": "^1.7.1",
-    "js-cookie": "^2.2.1",
-    "js-cookies": "^1.0.4",
-    "jsuites": "^5.12.0",
-    "page": "^1.3.7",
+    "@pdftron/pdfjs-express": "^8.7.5",
+    "cookie": "^1.0.2",
     "pagedown": "^1.1.0",
-    "polka": "^1.0.0-next.11",
-    "query-string": "^6.13.7",
-    "simplepicker": "^2.0.0",
-    "sirv": "^0.4.6",
+    "showdown": "^2.1.0",
+    "svelte-loading-spinners": "^0.3.6",
     "svelte-touch-timepicker": "^1.0.0",
     "sveltejs-tippy": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/runtime": "^7.12.5",
     "@beyonk/svelte-notifications": "^2.0.3",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.2",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@rollup/plugin-terser": "^0.4.4",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^1.4.2",
-    "rollup": "^2.79.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-svelte": "^6.1.1",
-    "sapper": "^0.29.3",
-    "svelte": "^3.59.2",
-    "svelte-loading-spinners": "^0.1.7",
-    "svelte-media": "^0.1.5"
-  }
+    "@sveltejs/adapter-node": "^5.3.1",
+    "@sveltejs/kit": "^2.37.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "svelte": "^4.2.19",
+    "svelte-check": "^3.6.0",
+    "typescript": "^5.3.0",
+    "vite": "^6.0.0"
+  },
+  "overrides": {
+    "cookie": "^1.0.2"
+  },
+  "type": "module"
 }
