Add make distclean and npm install

--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,7 @@
                     <include name="**"/>
                   </fileset>
                 </copy>
+                <mkdir dir="root"/>
                 <copy todir="target/classes/assets/root">
                   <fileset dir="root">
                     <include name="*.pdf"/>
