--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-v4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.wingsofcarolina</groupId>
-  <artifactId>manuals</artifactId>
+  <artifactId>wcfc-manuals</artifactId>
   <packaging>jar</packaging>
   <version>0.0.0</version>
   <name>wcfc-manuals</name>
