--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,12 @@
       <artifactId>jsoup</artifactId>
       <version>1.21.2</version>
     </dependency>
+    <!-- Jetty EE10 Servlets for CrossOriginFilter -->
+    <dependency>
+      <groupId>org.eclipse.jetty.ee10</groupId>
+      <artifactId>jetty-ee10-servlets</artifactId>
+      <version>12.1.1</version>
+    </dependency>
   </dependencies>
   <build>
     <defaultGoal>install</defaultGoal>
