--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@beyonk/svelte-notifications": "^4.3.0",
     "@sveltejs/adapter-node": "^5.3.2",
+    "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.41.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "svelte": "^5.38.10",
