Test DB connection on startup

--- a/src/main/resources/configuration.yml
+++ b/src/main/resources/configuration.yml
@@ -3,8 +3,9 @@
 root: ${ROOT:-./root}
 
 # Location of the MongoDB server
-# If on a Docker network, just give the name of the MongoDB
-# container. Otherwise give the IP:PORT for the MongoDB process.
+# Supports both mongodb:// and mongodb+srv:// connection strings
+# For local Docker: mongodb://mongodb
+# For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/database
 mongodb: ${MONGODB:-mongodb://mongodb}
 
 # URL of the server where the manuals service is running
