--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -53,6 +53,13 @@ jobs:
     - name: Build the app
       run: make build
 
+    - name: Authenticate to GHCR
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Run integration tests
       run: make integration-tests
 
