--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -54,7 +54,7 @@ jobs:
       run: make build
 
     - name: Authenticate to GHCR
-      uses: redhat-actions/podman-login@v1
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
