Ignore Google auth temp files, and also give more info if this happens in future (#10)

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+gha-creds-*
 
 # Ignore IntelliJ config except for run configurations
 /.idea/*
