--- a/.github/workflows/tag-on-pr-merge.yml
+++ b/.github/workflows/tag-on-pr-merge.yml
@@ -1,6 +1,6 @@
 name: tag-on-pr-merge
 on:
-  pull_request:
+  pull_request_target:
     types:
       - closed
     branches:
@@ -20,15 +20,28 @@ jobs:
       uses: actions/checkout@v5
       with:
         fetch-depth: 0
+        ref: main
+
+    - name: Check if PR is from a fork
+      id: fork_check
+      run: |
+        if [ "${{ github.event.pull_request.head.repo.fork }}" == "true" ]; then
+          echo "is_fork=true" >> $GITHUB_OUTPUT
+        else
+          echo "is_fork=false" >> $GITHUB_OUTPUT
+        fi
 
     - name: Install semver-cli
+      if: steps.fork_check.outputs.is_fork == 'false'
       run: cargo install semver-cli
 
     - name: Calculate the tag value
+      if: steps.fork_check.outputs.is_fork == 'false'
       id: bump_tag
       run: echo "tag=$(semver-cli $(make version) --increment)" >> $GITHUB_OUTPUT
 
     - name: Push git tag
+      if: steps.fork_check.outputs.is_fork == 'false'
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -39,6 +52,7 @@ jobs:
         git push origin "${{ steps.bump_tag.outputs.tag }}"
 
     - name: Trigger release workflow
+      if: steps.fork_check.outputs.is_fork == 'false'
       uses: actions/github-script@v7
       with:
         script: |
