--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -18,9 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       actions: read
-      contents: write
-      packages: write
-      security-events: write
+      contents: read
+      packages: read
 
     steps:
     - name: Install xmllint
@@ -47,7 +46,7 @@ jobs:
       run: make check-format
 
     - name: Run NPM checks
-      run: npm run check
+      run: npm ci --legacy-peer-deps && npm run check
       working-directory: ./client
 
     - name: Build the app
