--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -56,8 +56,8 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_PASSWORD }}
+        username: ${{ secrets.DEPENDABOT_ACCESS_USERNAME }}
+        password: ${{ secrets.DEPENDABOT_ACCESS_TOKEN }}
 
     - name: Run integration tests
       run: make integration-tests
