--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       run: echo "tag=$(semver-cli $(make version) --increment)" >> $GITHUB_OUTPUT
 
     - name: Determine the tag to be used
-      if: ${{ github.event_name == workflow_dispatch }}
+      if: ${{ github.event_name == 'workflow_dispatch' }}
       id: tag
       run: |
         if [ -n "${{ github.events.inputs.version }}" ]; then
@@ -47,7 +47,7 @@ jobs:
         echo "tag=$TAG" >> $GITHUB_OUTPUT
 
     - name: Push git tag
-      if: ${{ github.event_name == workflow_dispatch }}
+      if: ${{ github.event_name == 'workflow_dispatch' }}
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
