--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-        git tag -a "${{ steps.tag.outputs.tag }}"
+        git tag -a "${{ steps.tag.outputs.tag }}" -m "{{ steps.tag.outputs.tag }}"
         git push origin "${{ steps.tag.outputs.tag }}"
 
     - name: Setup Java
