Switch backend service to http/2

--- a/src/main/resources/configuration.yml
+++ b/src/main/resources/configuration.yml
@@ -40,8 +40,11 @@ slackApiBaseUrl: ${SLACK_API_BASE_URL:-https://hooks.slack.com}
 server:
     type: simple
     connector:
-        type: http
+        type: h2c
         port: ${SERVER_PORT:-9300}
+        # HTTP/2 specific settings
+        maxConcurrentStreams: 1024
+        initialStreamRecvWindow: 65535
     applicationContextPath: /
     adminContextPath: /admin
     requestLog:
