--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,17 @@
       <artifactId>jetty-ee10-servlets</artifactId>
       <version>12.1.3</version>
     </dependency>
+    <!-- HTTP/2 support for Jetty -->
+    <dependency>
+      <groupId>org.eclipse.jetty.http2</groupId>
+      <artifactId>jetty-http2-server</artifactId>
+      <version>12.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-alpn-server</artifactId>
+      <version>12.1.3</version>
+    </dependency>
   </dependencies>
   <build>
     <defaultGoal>install</defaultGoal>
